--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			            <h2>| Red Teaming | VAPT | CEH | CRTP | AppSec Expert |</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.youtube.com/@harshgupptapentester" class="btn btn-primary py-3 px-4">YouTube</a> 
+			            <p><a href="https://medium.com/@harshharshgupta4646" class="btn btn-primary py-3 px-4">Medium Blog</a> 
 							<a href="https://github.com/harshgupptaa" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
