Modified commit int

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://medium.com/@harshharshgupta4646" class="btn btn-primary py-3 px-4">Medium Blog</a> 
-							<a href="https://github.com/harshgupptaa" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+							<a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -514,7 +514,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I love do VAPT projects &amp; security research on vulnerabilities </h4>
 						<br>
-						<p><a href="https://github.com/harshgupptaa" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="#" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
